# sw_i2c

./: .gitignore  CMakeLists.txt  Kconfig.projbuild
include/: sw_i2c.h  sw_i2c_master.h  sw_i2c_slave.h
src/: sw_i2c_master.c  sw_i2c_slave.c
test/: CMakeLists.txt  Kconfig.projbuild  test_driver.h  test_main.c
test/esp32/: Kconfig.projbuild  test.c  test_driver.c
test/esp32/ulp/: test_main.c
